0.6
Bindings
	- Java

Prefpane
	- General Tab
		- Check version button

	- Applications Tab
		- Priority
		- Sticky
New Displays
	- Smoke
	- Music Video
	- NSLog
	- MailMe

Changes to current displays:
	Bubbles:
	- Color changing abilities
	- Support for priority (color change)

	Bezel:
	- Support for priority (brings higher priority items to the front of the queue)

New Localizations
	- German

0.5 - Release
Prefpane
	- General Tab
	- Applications Tab
	- Display Options

New Displays
	- Bubbles
	- Bezel

Bindings
	- AppleScript
	- Carbon
	- Cocoa
	- Perl
	- Python
	- TCL
	